# ROS4Beginners

./: README.md
Examples/src/all/mira/mira_description/: CMakeLists.txt  package.xml
Examples/src/all/mira/mira_description/config/: mira_control.yaml
Examples/src/all/mira/mira_description/launch/: kinetic_main.launch  main.launch  mira_complete.launch  mira_control.launch  mira_fixed_n.launch  mira_rviz_jointstate_gui.launch  put_robot_in_world.launch  robot_simulation_test.launch  spawn_mira.launch  spawn_mira_geometric.launch
Examples/src/all/mira/mira_description/models/mira/: mira.sdf  model.config  model.sdf
Examples/src/all/mira/mira_description/models/mira/meshes/: Mira_Body.STL  Mira_Eye.STL  Mira_Head.STL  mira_body.dae  mira_body_v2.dae  mira_eye.dae  mira_eye_v2.dae  mira_eye_v3.dae  mira_head.dae  mira_head_v2.dae  mira_head_v3.dae  mira_head_v4.dae
Examples/src/all/mira/mira_description/rviz_config/: mira.rviz
Examples/src/all/mira/mira_description/scripts/: mira_demo.py
Examples/src/all/mira/mira_description/urdf/: mira.urdf  mira_fixed.urdf  mira_geometric.urdf  mira_nocontrollers.urdf  mira_noinertias.urdf  mira_onecontroller.urdf  mira_only_for_urdf.urdf
ROS_Basics_in_Python/logs/actions_quiz/: build.cmake.000.log.stderr
ROS_Basics_in_Python/logs/services_quiz/: build.cmake.001.log.stderr
ROS_Basics_in_Python/src/actions_quiz/: CMakeLists.txt
URDF_for_Robot_Modeling/devel/: _setup_util.py
devel/: .catkin
src/: laser.bag
src/my_examples_pkg/: CMakeLists.txt
src/services_quiz/: CMakeLists.txt
(+231 files in other folders)
