<?xml version="1.0"?>
<package>
  <name>mira_description</name>
  <version>0.0.0</version>
  <description>The mira_description package</description>

  <maintainer email="rdaneel@todo.todo">rdaneel</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>spawn_robot_tools_pkg</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>spawn_robot_tools_pkg</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
